# telegram-bot-template

./: .gitignore  README.md  bot.Dockerfile  create.py  docker-compose.yml  pyproject.toml
.github/workflows/: prod_deployment.yml
src/: bot.py  conf.py
