[tool.poetry]
name = {{ name }}
version = "0.0.0"
description = {{ description }}
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
structlog = "^24.2.0"
pydantic = "^2.7.3"
environs = "^11.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
