[tool.poetry]
name = {{ name }}
version = "0.0.0"
description = {{ description }}
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
structlog = "24.4.0"
aiogram = "3.13.1"
environs = "11.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
